# xxhash-rust

./: .rust-analyzer.json  Cargo.toml  Cross.toml  README.md  valgrind.supp
.github/workflows/: cross-rust.yml  rust.yml
benches/: compare_c.rs
src/: const_xxh3.rs  const_xxh32.rs  const_xxh64.rs  lib.rs  utils.rs  v32.rs  xxh3.rs  xxh32.rs  xxh32_common.rs  xxh3_common.rs  xxh3_utils.rs  xxh64.rs  xxh64_common.rs
tests/: assert_correctness.rs  assert_correctness_miri.rs  quickcheck.rs  quickcheck_xxh3_64.rs  test-vectors.rs  xxh3_64_test_inputs.txt
