[package]
name = "xxhash-rust"
version = "0.8.0"
authors = ["Douman <douman@gmx.se>"]
edition = "2018"
description = "Implementation of xxhash"
readme = "README.md"
repository = "https://github.com/DoumanAsh/xxhash-rust"
license = "BSL-1.0"
keywords = ["hash", "xxhash"]
categories = ["algorithms"]
include = [
    "**/*.rs",
    "Cargo.toml",
    "README.md"
]

[[bench]]
name = "compare_c"
harness = false

[features]
# XXH32 makes sense only on 32bit platforms
xxh32 = [] # Enable xxh32 implementation
const_xxh32 = [] # Enable const xxh32 implementation

xxh64 = [] # Enable xxh64 implementation
const_xxh64 = [] # Enable const xxh64 implementation

[dev-dependencies]
twox-hash = "1"
xxhash-c-sys = "0.8.1"
criterion = "0.3"
